--- a/src/styles.css
+++ b/src/styles.css
@@ -6,7 +6,15 @@ body {
   max-width: 1400px;
   margin: 0 auto;
 }
-
+.grid {
+  display: grid;
+  grid-template-columns: 1fr 2fr 2fr;
+  grid-column-gap: 30px;
+}
+section {
+  max-width: 1200px;
+  margin: 0 auto;
+}
 header {
   background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
     url("../images/Perth-city-nightscape.jpg");
@@ -47,7 +55,45 @@ header a {
   margin-top: 32px;
   display: inline-block;
 }
-@media (max-width: 900px) {
+
+footer {
+  color: white;
+  background-image: linear-gradient(
+      rgba(39, 32, 68, 0.9),
+      rgba(39, 32, 68, 0.9)
+    ),
+    url("../images/Perth-city-elizabeth-quay.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  padding: 100px 0;
+}
+footer h3 {
+  font-size: 20px;
+  font-weight: 700;
+  line-height: 1.5;
+}
+footer p {
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 1.5;
+  opacity: 0.8;
+}
+footer a {
+  color: white;
+  opacity: 0.8;
+}
+footer ul {
+  padding: 0;
+}
+footer li {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  color: white;
+  opacity: 0.8;
+}
+
+@media (max-width: 960px) {
   header {
     padding: 60px 0;
   }
