--- a/src/styles.css
+++ b/src/styles.css
@@ -8,12 +8,18 @@ body {
 }
 .grid {
   display: grid;
+  grid-gap: 30px;
+}
+.grid-2-column {
+  grid-template-columns: 1fr 2fr;
+}
+.grid-footer {
   grid-template-columns: 1fr 2fr 2fr;
-  grid-column-gap: 30px;
 }
 section {
   max-width: 1200px;
   margin: 0 auto;
+  padding: 100px 0;
 }
 header {
   background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
@@ -55,7 +61,30 @@ header a {
   margin-top: 32px;
   display: inline-block;
 }
-
+main h3 {
+  font-weight: 700px;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 5px;
+  color: #272044;
+  opacity: 0.3;
+  text-transform: uppercase;
+}
+main h2 {
+  font-weight: 700px;
+  font-size: 40px;
+  line-height: 1.5;
+  color: #272044;
+}
+main p {
+  font-weight: 400px;
+  font-size: 16px;
+  line-height: 1.5;
+  color: #272044;
+}
+img {
+  max-width: 100%;
+}
 footer {
   color: white;
   background-image: linear-gradient(
@@ -105,5 +134,12 @@ footer li {
   }
   header h3 {
     font-size: 12px;
+  }
+  .grid {
+    grid-template-columns: 1fr;
+    grid-gap: 15px;
+  }
+  section {
+    padding: 30px;
   }
 }
