--- a/src/styles.css
+++ b/src/styles.css
@@ -16,10 +16,19 @@ body {
 .grid-footer {
   grid-template-columns: 1fr 2fr 2fr;
 }
+.grid-3-columns {
+  grid-template-columns: 1fr 1fr 1fr;
+}
+.text-center {
+  text-align: center;
+}
 section {
-  max-width: 1200px;
+  max-width: 100%;
   margin: 0 auto;
-  padding: 100px 0;
+  padding: 100px 100px;
+}
+section.second {
+  background-color: #f8f8f8;
 }
 header {
   background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
@@ -71,8 +80,8 @@ main h3 {
   text-transform: uppercase;
 }
 main h2 {
-  font-weight: 700px;
   font-size: 40px;
+  font-weight: 700px;
   line-height: 1.5;
   color: #272044;
 }
@@ -84,6 +93,43 @@ main p {
 }
 img {
   max-width: 100%;
+}
+.card {
+  background-color: white;
+  padding: 20px 20px;
+}
+.card-body {
+  margin: 30px;
+}
+.card h4 {
+  font-weight: 700px;
+  font-size: 24px;
+  line-height: 1.5;
+  color: #272044;
+  margin: 0;
+}
+.card h5 {
+  font-weight: 700px;
+  font-size: 18px;
+  line-height: 1.5;
+  color: #272044;
+  margin: 0;
+}
+.btn {
+  display: block;
+  color: white;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.5;
+  text-align: center;
+  letter-spacing: 3px;
+  padding: 16px;
+  background-color: #462cb3;
+  text-decoration: none;
+  text-transform: uppercase;
+}
+.card-footer {
+  padding: 10px;
 }
 footer {
   color: white;
