--- a/src/styles.css
+++ b/src/styles.css
@@ -3,7 +3,7 @@ body {
 }
 
 .container {
-  max-width: 1400px;
+  max-width: 100%;
   margin: 0 auto;
 }
 .grid {
@@ -12,6 +12,9 @@ body {
 }
 .grid-2-column {
   grid-template-columns: 1fr 2fr;
+}
+.grid-2-column-header {
+  grid-template-columns: 1fr 1fr;
 }
 .grid-footer {
   grid-template-columns: 1fr 2fr 2fr;
@@ -98,6 +101,10 @@ img {
   background-color: white;
   padding: 20px 20px;
 }
+.card-header {
+  padding: 0;
+  margin: 0;
+}
 .card-body {
   margin: 30px;
 }
@@ -130,6 +137,13 @@ img {
 }
 .card-footer {
   padding: 10px;
+}
+.card-header.grid {
+  grid-gap: 0;
+}
+.embed {
+  width: 100%;
+  aspect-ratio: 1/1;
 }
 footer {
   color: white;
@@ -187,5 +201,11 @@ footer li {
   }
   section {
     padding: 30px;
+  }
+  .card-header img {
+    display: none;
+  }
+  .embed {
+    aspect-ratio: 16/9;
   }
 }
